2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (verify_scanner_omp): Adjust to handle next page to
	return.

	* src/html/classic/gsad.xsl (html-gsa-logo): Add response indicator for
	verify scanner in scanner details page.

	* src/html/classic/omp.xsl (scanner [details]): Add extra scanner icons.
	(scanner-icons): Add next template argument, to specify next page.
	(scanner): Add argument in scanner-icons template call.

2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (init_validator, exec_omp_get): Handle download_ca_pub and
	download_key_pub commands.

	* src/gsad_omp.c (download_ca_pub, download_key_pub): New functions.

	* src/gsad_omp.h: Add functions prototypes.

	* src/html/classic/omp.xsl (html-scanners-table): Increase number of
	actions icons.
	(scanner-icons): New template, for verify scanner, Download CA Public
	Key and Download Public Key buttons.
	(scanner): Adjust to call scanner-icons template.

2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (report_format): Use may-op template to check
	for verify report format permission.

2015-03-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (format_file_name): Set variable to NULL directly,
	instead of passing a NULL entity to entity_text, which segfaults.

2015-03-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (filter-window-part, tag [for_resource])
	(new_target.html, details-window-line-actions): Add missing details.
	(new_scanner.html): New page.

2015-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (scanner [details]): Adjust to properly
	handle openvas scanner case, improve message wording and add code
	comments.

2015-03-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Use the "OpenVAS Default" scanner in IT-Schwachstellenampel.

	* src/html/its/gsad.xsl: Update copyright year.